<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:text="@string/Usuario"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mostrarUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tituloRegistro"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoUsuario" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:textColor="@color/black"
        android:text="@string/codIdent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mostrarUsuario" />

    <EditText
        android:id="@+id/cuadroIdenti"
        android:layout_width="70sp"
        android:layout_height="40sp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/vacio"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/mostrarUsuario"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/cuadroNombre"
        android:layout_width="110sp"
        android:layout_height="40sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/vacio"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/cuadroIdenti"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/cuadroRaza"
        android:layout_width="125sp"
        android:layout_height="40sp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/vacio"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/cuadroNombre"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/cuadroNac"
        android:layout_width="100sp"
        android:layout_height="40sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/vacio"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/cuadroRaza"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/cuadroSexo"
        android:layout_width="60sp"
        android:layout_height="40sp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/vacio"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/cuadroNombre"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/cuadroDNI"
        android:layout_width="95sp"
        android:layout_height="40sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/vacio"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/cuadroSexo"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/RegisNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="51dp"
        android:layout_height="27dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:textColor="@color/black"
        android:text="@string/RegisRaza"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/RegisFecha"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:textColor="@color/black"
        android:text="@string/RegisSexo"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/cuadroRaza"
        app:layout_constraintTop_toBottomOf="@+id/cuadroNombre" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:textColor="@color/black"
        android:text="@string/RegisDNI"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/cuadroNac"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/botonAlta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:text="@string/BotonAlta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/botonModifica"
        android:layout_width="111dp"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/BotonModifica"
        app:layout_constraintStart_toEndOf="@+id/botonAlta"
        app:layout_constraintTop_toBottomOf="@+id/cuadroNac" />

    <Button
        android:id="@+id/botonBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/BotonBorrar"
        app:layout_constraintStart_toEndOf="@+id/botonModifica"
        app:layout_constraintTop_toBottomOf="@+id/cuadroDNI" />

    <Button
        android:id="@+id/botonConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/BotonConsulta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonAlta" />

    <Button
        android:id="@+id/botonConsultarTodas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/BotonConsultaTodas"
        app:layout_constraintStart_toEndOf="@+id/botonConsulta"
        app:layout_constraintTop_toBottomOf="@+id/botonModifica" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/petlogopet" />

    <ImageView
        android:id="@+id/imagenGaler"
        android:layout_width="120dp"
        android:layout_height="122dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/cuadroIdenti"
        app:layout_constraintTop_toBottomOf="@+id/mostrarUsuario"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="232dp"
        android:layout_marginTop="20dp"
        android:text="@string/BotonImagen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonConsultarTodas" />

    <Button
        android:id="@+id/buttonAdministrarUsuarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:text="@string/botonAdmin"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/botonConsulta" />

</androidx.constraintlayout.widget.ConstraintLayout>