<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorVerderFondo"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoBienvenido"
        android:textColor="@color/darkGreen"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.613"
        app:srcCompat="@drawable/petlogopet" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:minHeight="48dp"
        android:text="@string/recuerda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cuadroContraUsuario"
        app:layout_constraintVertical_bias="0.179"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cuadroNombreUsuario"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/CuadroNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textUsuario"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cuadroContraUsuario"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/cuadroNombreUsuario"
        app:layout_constraintStart_toStartOf="@+id/cuadroNombreUsuario"
        app:layout_constraintTop_toBottomOf="@+id/cuadroNombreUsuario"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cuadroContra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textContra"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/BotonLogin"
        android:layout_width="128dp"
        android:layout_height="54dp"
        android:layout_marginTop="197dp"
        android:text="@string/textoLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cuadroContraUsuario"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/botonDarAlta"
        android:layout_width="155dp"
        android:layout_height="53dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="197dp"
        android:text="@string/DarseAlta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toEndOf="@+id/BotonLogin"
        app:layout_constraintStart_toStartOf="@+id/BotonLogin"
        app:layout_constraintTop_toTopOf="@+id/cuadroContraUsuario"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>