<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="102dp"
        android:layout_height="92dp"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loginalta" />

    <Button
        android:id="@+id/botonRegistrarUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/BotonRegistrarUsuario"
        app:layout_constraintEnd_toEndOf="@+id/cuadroContraUsuario"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/cuadroContraUsuario"
        app:layout_constraintTop_toBottomOf="@+id/cuadroContraUsuario" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cuadroContraUsuario"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="280dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cuadroUsuarioUsur"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cuadroUsuarioUsur"
        app:layout_constraintTop_toBottomOf="@+id/cuadroUsuarioUsur"
        app:passwordToggleEnabled="true"
        app:layout_constraintVertical_bias="0.149">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cuadroContra"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:inputType="textPassword"
            android:hint="@string/textContra"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TituloAlta"
        android:textColor="@color/darkGreen"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cuadroNombreUsuario"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/CuadroNombre"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:hint="@string/RegisNombre"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cuadroUsuarioUsur"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/cuadroNombreUsuario"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cuadroNombreUsuario"
        app:layout_constraintTop_toBottomOf="@+id/cuadroNombreUsuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/CuadroUsuario"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:hint="@string/Usuario"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
